--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,20 +1,22 @@
 .hero {
     background-color: var(--overlay);
     color: #fff;
-    height: 100vh;
+    height: 82vh;
     width: 100%;
     position: relative;
+    overflow: hidden;
+    margin-top: 5rem;
 }
 
-.hero:before {
-    content: '';
-    background: url('./images/hero.jpg') no-repeat center center/cover;
-    height: 100%;
-    width: 100%;
+.background-video {
     position: absolute;
     top: 0;
     left: 0;
+    width: 100%;
+    height: 80vh;
+    height: auto;
     z-index: -1;
+    opacity: 100%;
 }
 
 .hero .content {
@@ -22,60 +24,35 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     max-width: 1100px;
     margin: auto;
-    padding: 1rem;
 }
 
-.hero .content p:first-child {
-    font-style: italic;
-    font-size: .9rem;
-}
-
-.hero .content p:nth-child(2) {
-    font-size: 1.9rem;
-}
-
-.hero .content p:nth-child(3) {
-    font-size: 5rem;
+.hero .content p:nth-child(1) {
+    justify-content: center;
+    font-size: 6rem;
     font-weight: 700;
 }
 
-
-.hero .content p:nth-child(4) {
-    font-size: 2.2rem;
-    font-style: italic;
+.hero .content p:nth-child(2) {
+    font-size: 3rem;
+    font-style: bold;
+    font-weight: 200;
 }
 
 .hero .button {
-    margin: 1rem 0;
+    margin: 3rem 0rem;
     width: 300px;
-    background-color: var(--secondary-color);
-    border: 1px solid var(--secondary-color);
-    color: #333;
+    background-color: rgb(236, 217, 6);
+    border: 1px solid rgb(236, 217, 6);
+    color: #4c4a4a;
+    border-radius: 15px;
+    margin-top: 5rem;
 }
 
 .hero .button:hover {
-    background-color: var(--secondary-dark);
-    border: 1px solid var(--secondary-dark);
+    background-color: var(--primary-dark);
+    border: 1px solid var(--primary-dark);
+    color: #fff;
 }
-
-@media screen and (max-width:940px) {
-    .hero .content p:nth-child(3) {
-        font-size: 2.6rem;
-    }
-
-    .hero .content p:nth-child(4) {
-        font-size: 1.6rem;
-    }
-}
-
-
-
-
-
-
-
-
-
-
