--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -8,6 +8,8 @@
     transition: .3s ease-in;
     overflow: hidden;
     background-color: rgba(0,0,0,.9);
+    position: sticky;
+    z-index: 9999;
 }
 
 .header .navbar {
@@ -18,6 +20,8 @@
     margin: auto;
     height: 100%;
     padding: 0 1rem;
+    position: sticky;
+    z-index: 9999;
 }
 
 .header .nav-menu a {
