--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   --primary-dark: #4f9c55;
   --secondary-color: #ffea00;
   --secondary-dark:#e3d002;
-  --overlay: rgba(0,0,0,.7);
+  --overlay: rgba(0,0,0,.4);
 }
 
 * {
@@ -21,6 +21,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-size: 1.2rem;
   line-height: 1.2;
+  background-color: black;
 }
 
 code {
